--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 # Post Factory Requirements
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
 anthropic>=0.40.0
 openai>=1.54.0
 google-generativeai>=0.8.3
-streamlit>=1.39.0
+supabase>=2.3.0
+python-dotenv>=1.0.0
+requests>=2.32.0
+pillow>=11.0.0
 pandas>=2.2.0
 matplotlib>=3.9.0
 seaborn>=0.13.0
-pillow>=11.0.0
-python-dotenv>=1.0.0
-requests>=2.32.0
+plotly>=5.24.0
+openpyxl>=3.1.0
 langchain>=0.3.0
 langchain-anthropic>=0.3.0
 langchain-openai>=0.2.0
-plotly>=5.24.0
-openpyxl>=3.1.0
+streamlit>=1.39.0
