--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,9 @@ langchain>=0.3.0
 langchain-anthropic>=0.3.0
 langchain-openai>=0.2.0
 streamlit>=1.39.0
+
+# Media Generation Dependencies
+pygments>=2.17.0
+qrcode>=7.4.2
+reportlab>=4.0.0
+kaleido>=0.2.1
