--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ uvicorn[standard]>=0.27.0
 anthropic>=0.40.0
 openai>=1.54.0
 google-generativeai>=0.8.3
+google-auth>=2.27.0
+google-auth-httplib2>=0.2.0
 supabase>=2.3.0
 python-dotenv>=1.0.0
 requests>=2.32.0
