Remove Imagen from cover: use premium gradient for reliable speed
- Cover page now uses _generate_cover_gradient() instead of Imagen API
- Eliminates 10-30s Imagen latency, total carousel time now <15s
- Multi-stop gradient with geometric overlays, flowing curves, accent circles
- Updated .gitignore to exclude credential docs and test artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ Thumbs.db
 data/generated/
 post-app/GeminiImages/
 post-app/GeneratedCarousels/
+
+# Credential docs (may contain secrets)
+RENDER_SETUP_CREDENTIALS.md
+
+# Test artifacts
+test_*.png
+test_*.py
